@@ -29,7 +29,6 @@
 #include "main_window.h"
 #include "status_icon.h"
 #include "stream_thread.h"
-#include "save_thread.h"
 
 class Application : public Gnome::Main
 {
@@ -49,7 +48,6 @@ private:
 	Data::Schema						schema;
 	guint								scheduled_recording_id;
 	Glib::ustring						database_filename;
-	SaveThread*							save_thread;
 
 	void set_string_configuration_default(const Glib::ustring& key, const Glib::ustring& value);
 	void set_int_configuration_default(const Glib::ustring& key, gint value);
@@ -115,7 +113,6 @@ public:
 	
 	MainWindow& get_main_window();
 
-	void start_save_thread(gboolean block);
 	void select_channel_to_play();
 };
 
